# capcode

./: README.md
capcode-cpp/: CMakeLists.txt  README.md
capcode-cpp/cmake/: capcode_cppConfig.cmake.in
capcode-cpp/include/capcode/: capcode.hpp
capcode-cpp/src/: capcode.cpp
capcode-cpp/tests/: capcode_unit.cpp
executables/: capcode.go
go/: capcode.go
javascript/: capcode.js
python/: capcode.py
